--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@reduxjs/toolkit": "^2.9.2",
     "@stomp/stompjs": "^7.2.1",
     "axios": "^1.12.2",
-    "react": "^19.1.1",
+    "lucide": "^0.553.0",
+    "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
